#96 wrap table in div to fix overflow scrolling

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1198,6 +1198,10 @@ button#close-search:hover {
 
 /* table */
 
+.table-wrapper {
+    overflow-x: auto;
+}
+
 table {
     border-collapse: collapse;
     width: 100%;
